<resources>
    <string name="app_name">传  送</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="back">返回</string>
    <string name="titleText">标题</string>

    <string name="pic">图片</string>
    <string name="release_task">我要发布</string>
    <string name="bulletin_board">公布栏</string>
    <string name="mine">我的</string>
    <string name="tel">手机号</string>
    <string name="pwd">密码</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">关于</string>
    <string name="repeat_pwd">重复密码</string>
    <string name="true_name">真实姓名</string>
    <string name="register">注册</string>
    <string name="name">昵称</string>
    <string name="version">传送 %s</string>
</resources>
