<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aty_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <AutoCompleteTextView
                            android:id="@+id/etPhone"
                            style="@style/EditTextStyle"
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/tel"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <EditText
                            android:id="@+id/etName"
                            style="@style/EditTextStyle"
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <EditText
                            android:id="@+id/etRealName"
                            style="@style/EditTextStyle"
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/true_name"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <EditText
                            android:id="@+id/etPassword"
                            style="@style/EditTextStyle"
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/pwd"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <EditText
                            android:id="@+id/etRepeatPwd"
                            style="@style/EditTextStyle"
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/repeat_pwd"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@+id/llLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/DeepBtn"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:text="注 册"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>